--- a/style.css
+++ b/style.css
@@ -138,3 +138,30 @@ article.SliderProduct{
   font-size: 15px;
   line-height: 120%;
 }
+
+/*  */
+
+.Slider__header{
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 52px var(--sidePaddingSize);
+}
+
+.Slider__title{
+  font-size: 40px;
+  letter-spacing: -1.6px;
+  font-weight: 400;
+}
+
+.Slider__button{
+  font-size: 12px;
+  line-height: 120%;
+  padding: 12px 24px;
+  border: none;
+  background: #000;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: 1.5px;
+  height: 52px;
+}
