--- a/style.css
+++ b/style.css
@@ -139,7 +139,7 @@ article.SliderProduct{
   line-height: 120%;
 }
 
-/*  */
+/*    ---    Header styles    ---    */
 
 .Slider__header{
   display: flex;
